--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!doctype html>
 <html lang="en-US">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Default Page Title</title>
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-</head>
+    <head>
+        <title>Kenneth Potts</title>
+    </head>
 
-<body>
-
-</body>
+    <body>
+        Hello friends. Welcome to my page. It is under construction while I teach myself some web development!		
+    </body>
 </html>
